<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android3</string>
    <string name="action_help">Help</string>
    <string name="action_warning">Warning!</string>
    <string name="action_settings">Settings</string>
    
    <string name="callback_onCreate">on create</string>
    <string name="callback_onStart">on start</string>
    <string name="callback_onResume">on resume</string>
    <string name="callback_onPause">on pause</string>
    <string name="callback_onStop">on stop</string>
    <string name="callback_onRestart">on restart</string>
    <string name="callback_onDestroy">on destroy</string>
    
    <string name="androidThemes">Android Themes</string>
    <string name="action_ThemeDark">Dark Theme</string>
    <string name="action_ThemeLight">Light Theme</string>
    <string name="action_ThemeDarkLight">Light and Dark Bar Theme</string>

    <string name="coloredTitles">Colored Titles</string>
    <string name="redTitle">Red Title</string>
    <string name="greenTitle">Green Title</string>
    <string name="blueTitle">Blue Title</string>
    
    <string name="imageThemes">Image Theme</string>
    
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    
    <string name="overlayActionBar">Overlay ActionBar</string>
    <string name="hideActionBar">Hide ActionBar</string>
    <string name="showActionBar">Show ActionBar</string>
    
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>

    <string name="portraitLangdscape">Portrait-Landspace</string>
    
    <string name="title_activity_display_message">Display Message</string>

</resources>
