<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_light_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_help" />

    <item
        android:id="@+id/action_ThemesAndroid"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/androidThemes" />
    
    <item
        android:id="@+id/action_ThemesColoredTitles"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/coloredTitles" />
    
    <item
        android:id="@+id/action_ThemesImage"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/imageThemes" />

</menu>
